# SpeechOps

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  prometheus-alerts.yml  prometheus.yml  pyproject.toml  requirements.txt  run_all.ps1  run_all.sh  stop_all.ps1  stop_all.sh
.dvc/: config
api/: __init__.py  main.py
configs/: config.yaml
data/: processed.dvc
grafana/provisioning/dashboards/: dashboards.yaml  speechops-dashboard.json
models/: .gitkeep  baseline_unet1.pth  trained.dvc
notebooks/: .gitkeep
results/: train_loss.csv  val_loss.csv  val_snr.csv
scripts/: evaluate.py  inference.py  preprocess.py  run_all_configs.py  train.py  train2val.py  train_mlflow.py
src/: data_loader.py  metrics.py  model.py
tests/: test_data_loader.py  test_model.py
